# rustls-platform-verifier

./: .gitignore  Cargo.toml
android/rustls-platform-verifier/src/main/java/org/rustls/platformverifier/: CertificateVerifier.kt
src/: android.rs  lib.rs  wire.rs
src/tests/verification_mock/: go.mod  mod.rs
src/tests/verification_real_world/: mod.rs
src/verification/: android.rs  apple.rs  mod.rs  others.rs
src/verification/wire/: android.rs  bag_of_certificates.rs  error.rs  ios.rs  mod.rs  wasm.rs
